samples/_failures_safe/1761694164_1aa21d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d18e6009.c: In function ‘main’:
./samples/SAFE/__tmp_d18e6009.c:156:17: error: expected declaration or statement at end of input
  156 |                 } else if (status == 0) {
      |                 ^
./samples/SAFE/__tmp_d18e6009.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d18e6009.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d18e6009.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d18e6009.c:156:17: error: expected declaration or statement at end of input
